reference/5.1/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390787
Help Version: 5.2.0.0
keywords: powershell,コマンドレット
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 8599ac6b6d6449e72eb76156cbe34de469fcfa1e
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: ja-JP
ms.lasthandoff: 10/07/2020
ms.locfileid: "93220200"
---
# <span data-ttu-id="68cc6-103">Microsoft.PowerShell.Utility モジュール</span><span class="sxs-lookup"><span data-stu-id="68cc6-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="68cc6-104">説明</span><span class="sxs-lookup"><span data-stu-id="68cc6-104">Description</span></span>

<span data-ttu-id="68cc6-105">このセクションには、Microsoft. PowerShell. ユーティリティモジュールと共にインストールされるコマンドレットのヘルプトピックが含まれています。</span><span class="sxs-lookup"><span data-stu-id="68cc6-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="68cc6-106">このモジュールには、PowerShell の基本的な機能を管理するコマンドレットが含まれています。</span><span class="sxs-lookup"><span data-stu-id="68cc6-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="68cc6-107">Microsoft. PowerShell ユーティリティコマンドレット</span><span class="sxs-lookup"><span data-stu-id="68cc6-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="68cc6-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="68cc6-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="68cc6-109">PowerShell オブジェクトのインスタンスにカスタムプロパティとメソッドを追加します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="68cc6-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="68cc6-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="68cc6-111">PowerShell セッションに Microsoft .NET Framework クラスを追加します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-111">Adds a Microsoft .NET Framework class to a PowerShell session.</span></span>

### [<span data-ttu-id="68cc6-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="68cc6-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="68cc6-113">変数の値を削除します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="68cc6-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="68cc6-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="68cc6-115">2 つのオブジェクトのセットを比較します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="68cc6-116">Convert-String</span><span class="sxs-lookup"><span data-stu-id="68cc6-116">Convert-String</span></span>](Convert-String.md)
<span data-ttu-id="68cc6-117">例と一致するように文字列を書式設定します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-117">Formats a string to match examples.</span></span>

### [<span data-ttu-id="68cc6-118">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="68cc6-118">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="68cc6-119">コンマ区切り値 (CSV) 形式のオブジェクトのプロパティを元のオブジェクトの CSV バージョンに変換します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-119">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="68cc6-120">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="68cc6-120">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="68cc6-121">JSON 形式の文字列をカスタム オブジェクトに変換します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-121">Converts a JSON-formatted string to a custom object.</span></span>

### [<span data-ttu-id="68cc6-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="68cc6-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="68cc6-123">SDDL 文字列をカスタムオブジェクトに変換します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="68cc6-124">ConvertFrom-String</span><span class="sxs-lookup"><span data-stu-id="68cc6-124">ConvertFrom-String</span></span>](ConvertFrom-String.md)
<span data-ttu-id="68cc6-125">文字列のコンテンツから構造化されたプロパティを抽出して解析します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-125">Extracts and parses structured properties from string content.</span></span>

### [<span data-ttu-id="68cc6-126">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="68cc6-126">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="68cc6-127">1 つまたは複数のキーと値のペアを含む文字列をハッシュ テーブルに変換します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-127">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="68cc6-128">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="68cc6-128">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="68cc6-129">.NET オブジェクトを一連のコンマ区切り値 (CSV) 文字列に変換します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-129">Converts .NET objects into a series of comma-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="68cc6-130">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="68cc6-130">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="68cc6-131">.NET オブジェクトを、Web ブラウザーで表示できる HTML に変換します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-131">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="68cc6-132">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="68cc6-132">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="68cc6-133">オブジェクトを JSON 形式の文字列に変換します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-133">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="68cc6-134">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="68cc6-134">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="68cc6-135">オブジェクトの XML ベースの表現を作成します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-135">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="68cc6-136">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="68cc6-136">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="68cc6-137">実行空間を使用して、対話型デバッグセッションを開始します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-137">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="68cc6-138">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="68cc6-138">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="68cc6-139">現在のコンソール内のブレークポイントを無効にします。</span><span class="sxs-lookup"><span data-stu-id="68cc6-139">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="68cc6-140">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="68cc6-140">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="68cc6-141">1つ以上の実行空間でのデバッグを無効にし、保留中のすべてのデバッガーを停止します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-141">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="68cc6-142">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="68cc6-142">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="68cc6-143">現在のコンソール内のブレークポイントを有効にします。</span><span class="sxs-lookup"><span data-stu-id="68cc6-143">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="68cc6-144">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="68cc6-144">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="68cc6-145">デバッガーがアタッチされるまでブレークポイントが保持される実行空間でのデバッグを有効にします。</span><span class="sxs-lookup"><span data-stu-id="68cc6-145">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="68cc6-146">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="68cc6-146">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="68cc6-147">現在定義されているエイリアスに関する情報をファイルにエクスポートします。</span><span class="sxs-lookup"><span data-stu-id="68cc6-147">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="68cc6-148">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="68cc6-148">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="68cc6-149">1 つまたは複数のオブジェクトの XML ベースの表現を作成し、ファイルに格納します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-149">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="68cc6-150">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="68cc6-150">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="68cc6-151">オブジェクトを一連のコンマ区切り値 (CSV) 文字列に変換し、その文字列をファイルに保存します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-151">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="68cc6-152">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="68cc6-152">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="68cc6-153">現在のセッションの書式設定データを書式設定ファイルに保存します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-153">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="68cc6-154">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="68cc6-154">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="68cc6-155">別のセッションからコマンドをエクスポートし、PowerShell モジュールに保存します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-155">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="68cc6-156">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="68cc6-156">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="68cc6-157">カスタマイズされたビューを使用して、出力を書式設定します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-157">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="68cc6-158">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="68cc6-158">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="68cc6-159">ファイルまたはその他の入力を16進数として表示します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-159">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="68cc6-160">Format-List</span><span class="sxs-lookup"><span data-stu-id="68cc6-160">Format-List</span></span>](Format-List.md)
<span data-ttu-id="68cc6-161">出力の各プロパティは、新しい行に表示されるプロパティの一覧として書式設定されます。</span><span class="sxs-lookup"><span data-stu-id="68cc6-161">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="68cc6-162">Format-Table</span><span class="sxs-lookup"><span data-stu-id="68cc6-162">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="68cc6-163">出力を表として書式設定します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-163">Formats the output as a table.</span></span>

### [<span data-ttu-id="68cc6-164">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="68cc6-164">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="68cc6-165">各オブジェクトの 1 つのプロパティのみを表示する幅の広いテーブルに、オブジェクトを書式設定して表示します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-165">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="68cc6-166">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="68cc6-166">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="68cc6-167">現在のセッションのエイリアスを取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-167">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="68cc6-168">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="68cc6-168">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="68cc6-169">オペレーティング システムの現在のカルチャ設定を取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-169">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="68cc6-170">Get-Date</span><span class="sxs-lookup"><span data-stu-id="68cc6-170">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="68cc6-171">現在の日付と時刻を取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-171">Gets the current date and time.</span></span>

### [<span data-ttu-id="68cc6-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="68cc6-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="68cc6-173">イベント キュー内のイベントを取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="68cc6-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="68cc6-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="68cc6-175">現在のセッションのイベント サブスクライバーを取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="68cc6-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="68cc6-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="68cc6-177">指定されたハッシュ アルゴリズムを使用して、ファイルのハッシュ値を計算します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="68cc6-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="68cc6-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="68cc6-179">現在のセッションの書式設定データを取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="68cc6-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="68cc6-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="68cc6-181">現在のホスト プログラムを表すオブジェクトを取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="68cc6-182">Get-Member</span><span class="sxs-lookup"><span data-stu-id="68cc6-182">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="68cc6-183">オブジェクトのプロパティとメソッドを取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-183">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="68cc6-184">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="68cc6-184">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="68cc6-185">現在のセッションで設定されたブレークポイントを取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-185">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="68cc6-186">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="68cc6-186">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="68cc6-187">現在の呼び出し履歴を表示します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-187">Displays the current call stack.</span></span>

### [<span data-ttu-id="68cc6-188">Get-Random</span><span class="sxs-lookup"><span data-stu-id="68cc6-188">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="68cc6-189">乱数を取得するか、オブジェクトをコレクションからランダムに選択します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-189">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="68cc6-190">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="68cc6-190">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="68cc6-191">PowerShell ホストプロセス内のアクティブな実行空間を取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-191">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="68cc6-192">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="68cc6-192">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="68cc6-193">実行空間のデバッグオプションを示します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-193">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="68cc6-194">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="68cc6-194">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="68cc6-195">トレース用にインストルメント化された PowerShell コンポーネントを取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-195">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="68cc6-196">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="68cc6-196">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="68cc6-197">現在のセッションで、拡張型データを取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-197">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="68cc6-198">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="68cc6-198">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="68cc6-199">オペレーティングシステムの現在の UI カルチャ設定を取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-199">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="68cc6-200">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="68cc6-200">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="68cc6-201">並べ替えられたリストから一意の項目を返します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-201">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="68cc6-202">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="68cc6-202">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="68cc6-203">現在のコンソール内の変数を取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-203">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="68cc6-204">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="68cc6-204">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="68cc6-205">承認された PowerShell 動詞を取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-205">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="68cc6-206">Group-Object</span><span class="sxs-lookup"><span data-stu-id="68cc6-206">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="68cc6-207">指定したプロパティに対して同じ値を含むオブジェクトをグループ化します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-207">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="68cc6-208">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="68cc6-208">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="68cc6-209">ファイルからエイリアス一覧をインポートします。</span><span class="sxs-lookup"><span data-stu-id="68cc6-209">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="68cc6-210">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="68cc6-210">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="68cc6-211">EXPORT-CLIXML ファイルをインポートし、対応するオブジェクトを PowerShell に作成します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-211">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="68cc6-212">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="68cc6-212">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="68cc6-213">コンマ区切り値 (CSV) ファイルの項目から、テーブルに似たカスタムオブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-213">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="68cc6-214">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="68cc6-214">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="68cc6-215">オペレーティング システム用に選択されている UI カルチャに基づき、言語固有のデータをスクリプトと関数にインポートします。</span><span class="sxs-lookup"><span data-stu-id="68cc6-215">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="68cc6-216">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="68cc6-216">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="68cc6-217">から値をインポートします。.PSD1 ファイルの内容を呼び出しません。</span><span class="sxs-lookup"><span data-stu-id="68cc6-217">Imports values from a .PSD1 file without invoking its contents</span></span>

### [<span data-ttu-id="68cc6-218">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="68cc6-218">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="68cc6-219">別のセッションから現在のセッションにコマンドをインポートします。</span><span class="sxs-lookup"><span data-stu-id="68cc6-219">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="68cc6-220">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="68cc6-220">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="68cc6-221">ローカル コンピューター上でコマンドまたは式を実行します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-221">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="68cc6-222">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="68cc6-222">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="68cc6-223">RESTful Web サービスに HTTP または HTTPS 要求を送信します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-223">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="68cc6-224">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="68cc6-224">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="68cc6-225">インターネット上の Web ページからコンテンツを取得します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-225">Gets content from a web page on the Internet.</span></span>

### [<span data-ttu-id="68cc6-226">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="68cc6-226">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="68cc6-227">スクリプト ブロックとコマンドレットの実行に要する時間を計測します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-227">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="68cc6-228">Measure-Object</span><span class="sxs-lookup"><span data-stu-id="68cc6-228">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="68cc6-229">オブジェクトの数値プロパティと、テキストのファイルなど文字列オブジェクト内の文字、単語、および行を計算します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-229">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="68cc6-230">New-Alias</span><span class="sxs-lookup"><span data-stu-id="68cc6-230">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="68cc6-231">新しいエイリアスを作成します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-231">Creates a new alias.</span></span>

### [<span data-ttu-id="68cc6-232">New-Event</span><span class="sxs-lookup"><span data-stu-id="68cc6-232">New-Event</span></span>](New-Event.md)
<span data-ttu-id="68cc6-233">新しいイベントを作成します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-233">Creates a new event.</span></span>

### [<span data-ttu-id="68cc6-234">新規-Guid</span><span class="sxs-lookup"><span data-stu-id="68cc6-234">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="68cc6-235">GUID を作成します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-235">Creates a GUID.</span></span>

### [<span data-ttu-id="68cc6-236">New-Object</span><span class="sxs-lookup"><span data-stu-id="68cc6-236">New-Object</span></span>](New-Object.md)
<span data-ttu-id="68cc6-237">Microsoft .NET Framework または COM オブジェクトのインスタンスを作成します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-237">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="68cc6-238">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="68cc6-238">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="68cc6-239">一時ファイルを作成します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-239">Creates a temporary file.</span></span>

### [<span data-ttu-id="68cc6-240">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="68cc6-240">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="68cc6-241">TimeSpan オブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-241">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="68cc6-242">New-Variable</span><span class="sxs-lookup"><span data-stu-id="68cc6-242">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="68cc6-243">新しい変数を作成します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-243">Creates a new variable.</span></span>

### [<span data-ttu-id="68cc6-244">Out-File</span><span class="sxs-lookup"><span data-stu-id="68cc6-244">Out-File</span></span>](Out-File.md)
<span data-ttu-id="68cc6-245">ファイルに出力を送信します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-245">Sends output to a file.</span></span>

### [<span data-ttu-id="68cc6-246">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="68cc6-246">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="68cc6-247">別のウィンドウの対話型のテーブルに出力を送信します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-247">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="68cc6-248">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="68cc6-248">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="68cc6-249">プリンターに出力を送信します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-249">Sends output to a printer.</span></span>

### [<span data-ttu-id="68cc6-250">Out-String</span><span class="sxs-lookup"><span data-stu-id="68cc6-250">Out-String</span></span>](Out-String.md)
<span data-ttu-id="68cc6-251">入力オブジェクトを文字列として出力します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-251">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="68cc6-252">Read-Host</span><span class="sxs-lookup"><span data-stu-id="68cc6-252">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="68cc6-253">コンソールからの入力行を読み取ります。</span><span class="sxs-lookup"><span data-stu-id="68cc6-253">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="68cc6-254">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="68cc6-254">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="68cc6-255">PowerShell エンジンとコマンドレットによって生成されるイベントをサブスクライブし `New-Event` ます。</span><span class="sxs-lookup"><span data-stu-id="68cc6-255">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="68cc6-256">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="68cc6-256">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="68cc6-257">Microsoft .NET Framework オブジェクトによって生成されるイベントをサブスクライブします。</span><span class="sxs-lookup"><span data-stu-id="68cc6-257">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="68cc6-258">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="68cc6-258">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="68cc6-259">イベントをイベント キューから削除します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-259">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="68cc6-260">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="68cc6-260">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="68cc6-261">現在のコンソールからブレークポイントを削除します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-261">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="68cc6-262">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="68cc6-262">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="68cc6-263">現在のセッションから拡張型を削除します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-263">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="68cc6-264">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="68cc6-264">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="68cc6-265">変数とその値を削除します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-265">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="68cc6-266">Select-Object</span><span class="sxs-lookup"><span data-stu-id="68cc6-266">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="68cc6-267">オブジェクトまたはオブジェクトのプロパティを選択します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-267">Selects objects or object properties.</span></span>

### [<span data-ttu-id="68cc6-268">Select-String</span><span class="sxs-lookup"><span data-stu-id="68cc6-268">Select-String</span></span>](Select-String.md)
<span data-ttu-id="68cc6-269">文字列とファイル内のテキストを検索します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-269">Finds text in strings and files.</span></span>

### [<span data-ttu-id="68cc6-270">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="68cc6-270">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="68cc6-271">XML 文字列または XML ドキュメント内のテキストを検索します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-271">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="68cc6-272">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="68cc6-272">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="68cc6-273">電子メールを送信します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-273">Sends an email message.</span></span>

### [<span data-ttu-id="68cc6-274">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="68cc6-274">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="68cc6-275">現在の PowerShell セッションで、コマンドレットまたはその他のコマンドのエイリアスを作成または変更します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-275">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="68cc6-276">Set-Date</span><span class="sxs-lookup"><span data-stu-id="68cc6-276">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="68cc6-277">指定する時刻にコンピューターのシステム時刻を変更します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-277">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="68cc6-278">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="68cc6-278">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="68cc6-279">行、コマンド、または変数にブレークポイントを設定します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-279">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="68cc6-280">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="68cc6-280">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="68cc6-281">PowerShell コンポーネントのトレースを構成、開始、および停止します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-281">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="68cc6-282">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="68cc6-282">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="68cc6-283">変数の値を設定します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-283">Sets the value of a variable.</span></span>

### [<span data-ttu-id="68cc6-284">Show-Command</span><span class="sxs-lookup"><span data-stu-id="68cc6-284">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="68cc6-285">グラフィカルウィンドウに PowerShell コマンド情報を表示します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-285">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="68cc6-286">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="68cc6-286">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="68cc6-287">プロパティ値別にオブジェクトを並べ替えます。</span><span class="sxs-lookup"><span data-stu-id="68cc6-287">Sorts objects by property values.</span></span>

### [<span data-ttu-id="68cc6-288">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="68cc6-288">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="68cc6-289">指定された期間、スクリプトまたはセッションでアクティビティを中断します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-289">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="68cc6-290">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="68cc6-290">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="68cc6-291">ファイルまたは変数にコマンドの出力を保存し、またそれをパイプラインに送信します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-291">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="68cc6-292">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="68cc6-292">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="68cc6-293">指定された式またはコマンドのトレースを構成し、開始します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-293">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="68cc6-294">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="68cc6-294">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="68cc6-295">インターネットからダウンロードされたファイルのブロックを解除します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-295">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="68cc6-296">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="68cc6-296">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="68cc6-297">イベントのサブスクリプションを取り消します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-297">Cancels an event subscription.</span></span>

### [<span data-ttu-id="68cc6-298">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="68cc6-298">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="68cc6-299">現在のセッションの書式設定データを更新します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-299">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="68cc6-300">Update-List</span><span class="sxs-lookup"><span data-stu-id="68cc6-300">Update-List</span></span>](Update-List.md)
<span data-ttu-id="68cc6-301">オブジェクトのコレクションを格納するプロパティ値の項目を追加または削除します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-301">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="68cc6-302">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="68cc6-302">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="68cc6-303">セッションで、拡張型データを更新します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-303">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="68cc6-304">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="68cc6-304">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="68cc6-305">スクリプト内の次のステートメントを実行する前に、デバッガー内のスクリプトを停止します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-305">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="68cc6-306">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="68cc6-306">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="68cc6-307">特定のイベントが発生するまで待機してから、実行を継続します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-307">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="68cc6-308">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="68cc6-308">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="68cc6-309">デバッグ メッセージをコンソールに出力します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-309">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="68cc6-310">書き込み-エラー</span><span class="sxs-lookup"><span data-stu-id="68cc6-310">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="68cc6-311">エラー ストリームにオブジェクトを書き込みます。</span><span class="sxs-lookup"><span data-stu-id="68cc6-311">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="68cc6-312">Write-Host</span><span class="sxs-lookup"><span data-stu-id="68cc6-312">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="68cc6-313">カスタマイズした出力をホストに書き込みます。</span><span class="sxs-lookup"><span data-stu-id="68cc6-313">Writes customized output to a host.</span></span>

### [<span data-ttu-id="68cc6-314">Write-Information</span><span class="sxs-lookup"><span data-stu-id="68cc6-314">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="68cc6-315">PowerShell がコマンドの情報ストリームデータを処理する方法を指定します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-315">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="68cc6-316">Write-Output</span><span class="sxs-lookup"><span data-stu-id="68cc6-316">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="68cc6-317">指定されたオブジェクトをパイプラインの次のコマンドに送信します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-317">Sends the specified objects to the next command in the pipeline.</span></span>

### [<span data-ttu-id="68cc6-318">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="68cc6-318">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="68cc6-319">PowerShell コマンドウィンドウ内の進行状況バーを表示します。</span><span class="sxs-lookup"><span data-stu-id="68cc6-319">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="68cc6-320">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="68cc6-320">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="68cc6-321">テキストを詳細メッセージ ストリームに書き込みます。</span><span class="sxs-lookup"><span data-stu-id="68cc6-321">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="68cc6-322">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="68cc6-322">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="68cc6-323">警告メッセージを書き込みます。</span><span class="sxs-lookup"><span data-stu-id="68cc6-323">Writes a warning message.</span></span>
