reference/7.0/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113633
Help Version: 7.0.1.0
keywords: powershell,コマンドレット
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 6afa678e516ca3f3f6af5be87d2bb7eea628fcf5
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: ja-JP
ms.lasthandoff: 10/07/2020
ms.locfileid: "93220403"
---
# <span data-ttu-id="e64b5-103">Microsoft.PowerShell.Utility モジュール</span><span class="sxs-lookup"><span data-stu-id="e64b5-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="e64b5-104">説明</span><span class="sxs-lookup"><span data-stu-id="e64b5-104">Description</span></span>

<span data-ttu-id="e64b5-105">このセクションには、Microsoft. PowerShell. ユーティリティモジュールと共にインストールされるコマンドレットのヘルプトピックが含まれています。</span><span class="sxs-lookup"><span data-stu-id="e64b5-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="e64b5-106">このモジュールには、PowerShell の基本的な機能を管理するコマンドレットが含まれています。</span><span class="sxs-lookup"><span data-stu-id="e64b5-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="e64b5-107">Microsoft. PowerShell ユーティリティコマンドレット</span><span class="sxs-lookup"><span data-stu-id="e64b5-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="e64b5-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="e64b5-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="e64b5-109">PowerShell オブジェクトのインスタンスにカスタムプロパティとメソッドを追加します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="e64b5-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="e64b5-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="e64b5-111">PowerShell セッションに Microsoft .NET コアクラスを追加します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-111">Adds a Microsoft .NET Core class to a PowerShell session.</span></span>

### [<span data-ttu-id="e64b5-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="e64b5-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="e64b5-113">変数の値を削除します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="e64b5-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="e64b5-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="e64b5-115">2 つのオブジェクトのセットを比較します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="e64b5-116">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="e64b5-116">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="e64b5-117">コンマ区切り値 (CSV) 形式のオブジェクトのプロパティを元のオブジェクトの CSV バージョンに変換します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-117">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="e64b5-118">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="e64b5-118">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="e64b5-119">JSON 形式の文字列をカスタムオブジェクトまたはハッシュテーブルに変換します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-119">Converts a JSON-formatted string to a custom object or a hash table.</span></span>

### [<span data-ttu-id="e64b5-120">ConvertFrom-Markdown</span><span class="sxs-lookup"><span data-stu-id="e64b5-120">ConvertFrom-Markdown</span></span>](ConvertFrom-Markdown.md)
<span data-ttu-id="e64b5-121">文字列またはファイルの内容を **Markdowninfo** オブジェクトに変換します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-121">Convert the contents of a string or a file to a **MarkdownInfo** object.</span></span>

### [<span data-ttu-id="e64b5-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="e64b5-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="e64b5-123">SDDL 文字列をカスタムオブジェクトに変換します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="e64b5-124">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="e64b5-124">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="e64b5-125">1 つまたは複数のキーと値のペアを含む文字列をハッシュ テーブルに変換します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-125">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="e64b5-126">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="e64b5-126">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="e64b5-127">.NET オブジェクトを一連の文字区切り値 (CSV) 文字列に変換します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-127">Converts .NET objects into a series of character-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="e64b5-128">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="e64b5-128">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="e64b5-129">.NET オブジェクトを、Web ブラウザーで表示できる HTML に変換します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-129">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="e64b5-130">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="e64b5-130">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="e64b5-131">オブジェクトを JSON 形式の文字列に変換します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-131">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="e64b5-132">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="e64b5-132">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="e64b5-133">オブジェクトの XML ベースの表現を作成します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-133">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="e64b5-134">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="e64b5-134">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="e64b5-135">実行空間を使用して、対話型デバッグセッションを開始します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-135">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="e64b5-136">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="e64b5-136">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="e64b5-137">現在のコンソール内のブレークポイントを無効にします。</span><span class="sxs-lookup"><span data-stu-id="e64b5-137">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="e64b5-138">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="e64b5-138">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="e64b5-139">1つ以上の実行空間でのデバッグを無効にし、保留中のすべてのデバッガーを停止します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-139">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="e64b5-140">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="e64b5-140">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="e64b5-141">現在のコンソール内のブレークポイントを有効にします。</span><span class="sxs-lookup"><span data-stu-id="e64b5-141">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="e64b5-142">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="e64b5-142">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="e64b5-143">デバッガーがアタッチされるまでブレークポイントが保持される実行空間でのデバッグを有効にします。</span><span class="sxs-lookup"><span data-stu-id="e64b5-143">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="e64b5-144">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="e64b5-144">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="e64b5-145">現在定義されているエイリアスに関する情報をファイルにエクスポートします。</span><span class="sxs-lookup"><span data-stu-id="e64b5-145">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="e64b5-146">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="e64b5-146">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="e64b5-147">1 つまたは複数のオブジェクトの XML ベースの表現を作成し、ファイルに格納します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-147">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="e64b5-148">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="e64b5-148">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="e64b5-149">オブジェクトを一連のコンマ区切り値 (CSV) 文字列に変換し、その文字列をファイルに保存します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-149">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="e64b5-150">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="e64b5-150">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="e64b5-151">現在のセッションの書式設定データを書式設定ファイルに保存します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-151">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="e64b5-152">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="e64b5-152">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="e64b5-153">別のセッションからコマンドをエクスポートし、PowerShell モジュールに保存します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-153">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="e64b5-154">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="e64b5-154">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="e64b5-155">カスタマイズされたビューを使用して、出力を書式設定します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-155">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="e64b5-156">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="e64b5-156">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="e64b5-157">ファイルまたはその他の入力を16進数として表示します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-157">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="e64b5-158">Format-List</span><span class="sxs-lookup"><span data-stu-id="e64b5-158">Format-List</span></span>](Format-List.md)
<span data-ttu-id="e64b5-159">出力の各プロパティは、新しい行に表示されるプロパティの一覧として書式設定されます。</span><span class="sxs-lookup"><span data-stu-id="e64b5-159">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="e64b5-160">Format-Table</span><span class="sxs-lookup"><span data-stu-id="e64b5-160">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="e64b5-161">出力を表として書式設定します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-161">Formats the output as a table.</span></span>

### [<span data-ttu-id="e64b5-162">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="e64b5-162">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="e64b5-163">各オブジェクトの 1 つのプロパティのみを表示する幅の広いテーブルに、オブジェクトを書式設定して表示します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-163">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="e64b5-164">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="e64b5-164">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="e64b5-165">現在のセッションのエイリアスを取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-165">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="e64b5-166">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="e64b5-166">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="e64b5-167">オペレーティング システムの現在のカルチャ設定を取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-167">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="e64b5-168">Get-Date</span><span class="sxs-lookup"><span data-stu-id="e64b5-168">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="e64b5-169">現在の日付と時刻を取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-169">Gets the current date and time.</span></span>

### [<span data-ttu-id="e64b5-170">Get-Error</span><span class="sxs-lookup"><span data-stu-id="e64b5-170">Get-Error</span></span>](Get-Error.md)
<span data-ttu-id="e64b5-171">現在のセッションからの最新のエラーメッセージを取得して表示します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-171">Gets and displays the most recent error messages from the current session.</span></span>

### [<span data-ttu-id="e64b5-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="e64b5-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="e64b5-173">イベント キュー内のイベントを取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="e64b5-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="e64b5-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="e64b5-175">現在のセッションのイベント サブスクライバーを取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="e64b5-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="e64b5-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="e64b5-177">指定されたハッシュ アルゴリズムを使用して、ファイルのハッシュ値を計算します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="e64b5-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="e64b5-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="e64b5-179">現在のセッションの書式設定データを取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="e64b5-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="e64b5-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="e64b5-181">現在のホスト プログラムを表すオブジェクトを取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="e64b5-182">Get-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="e64b5-182">Get-MarkdownOption</span></span>](Get-MarkdownOption.md)
<span data-ttu-id="e64b5-183">コンソールで Markdown コンテンツをレンダリングするために使用される、現在の色とスタイルを返します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-183">Returns the current colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="e64b5-184">Get-Member</span><span class="sxs-lookup"><span data-stu-id="e64b5-184">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="e64b5-185">オブジェクトのプロパティとメソッドを取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-185">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="e64b5-186">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="e64b5-186">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="e64b5-187">現在のセッションで設定されたブレークポイントを取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-187">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="e64b5-188">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="e64b5-188">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="e64b5-189">現在の呼び出し履歴を表示します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-189">Displays the current call stack.</span></span>

### [<span data-ttu-id="e64b5-190">Get-Random</span><span class="sxs-lookup"><span data-stu-id="e64b5-190">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="e64b5-191">乱数を取得するか、オブジェクトをコレクションからランダムに選択します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-191">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="e64b5-192">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="e64b5-192">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="e64b5-193">PowerShell ホストプロセス内のアクティブな実行空間を取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-193">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="e64b5-194">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="e64b5-194">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="e64b5-195">実行空間のデバッグオプションを示します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-195">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="e64b5-196">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="e64b5-196">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="e64b5-197">トレース用にインストルメント化された PowerShell コンポーネントを取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-197">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="e64b5-198">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="e64b5-198">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="e64b5-199">現在のセッションで、拡張型データを取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-199">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="e64b5-200">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="e64b5-200">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="e64b5-201">オペレーティングシステムの現在の UI カルチャ設定を取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-201">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="e64b5-202">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="e64b5-202">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="e64b5-203">並べ替えられたリストから一意の項目を返します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-203">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="e64b5-204">Get-Uptime</span><span class="sxs-lookup"><span data-stu-id="e64b5-204">Get-Uptime</span></span>](Get-Uptime.md)
<span data-ttu-id="e64b5-205">前回の起動時からの **TimeSpan** を取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-205">Get the **TimeSpan** since last boot.</span></span>

### [<span data-ttu-id="e64b5-206">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="e64b5-206">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="e64b5-207">現在のコンソール内の変数を取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-207">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="e64b5-208">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="e64b5-208">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="e64b5-209">承認された PowerShell 動詞を取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-209">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="e64b5-210">Group-Object</span><span class="sxs-lookup"><span data-stu-id="e64b5-210">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="e64b5-211">指定したプロパティに対して同じ値を含むオブジェクトをグループ化します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-211">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="e64b5-212">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="e64b5-212">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="e64b5-213">ファイルからエイリアス一覧をインポートします。</span><span class="sxs-lookup"><span data-stu-id="e64b5-213">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="e64b5-214">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="e64b5-214">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="e64b5-215">EXPORT-CLIXML ファイルをインポートし、対応するオブジェクトを PowerShell に作成します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-215">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="e64b5-216">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="e64b5-216">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="e64b5-217">コンマ区切り値 (CSV) ファイルの項目から、テーブルに似たカスタムオブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-217">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="e64b5-218">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="e64b5-218">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="e64b5-219">オペレーティング システム用に選択されている UI カルチャに基づき、言語固有のデータをスクリプトと関数にインポートします。</span><span class="sxs-lookup"><span data-stu-id="e64b5-219">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="e64b5-220">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="e64b5-220">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="e64b5-221">内容を呼び出さずに、ファイルから値をインポート `.PSD1` します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-221">Imports values from a `.PSD1` file without invoking its contents.</span></span>

### [<span data-ttu-id="e64b5-222">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="e64b5-222">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="e64b5-223">別のセッションから現在のセッションにコマンドをインポートします。</span><span class="sxs-lookup"><span data-stu-id="e64b5-223">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="e64b5-224">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="e64b5-224">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="e64b5-225">ローカル コンピューター上でコマンドまたは式を実行します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-225">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="e64b5-226">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="e64b5-226">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="e64b5-227">RESTful Web サービスに HTTP または HTTPS 要求を送信します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-227">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="e64b5-228">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="e64b5-228">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="e64b5-229">インターネット上の web ページからコンテンツを取得します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-229">Gets content from a web page on the internet.</span></span>

### [<span data-ttu-id="e64b5-230">Join-String</span><span class="sxs-lookup"><span data-stu-id="e64b5-230">Join-String</span></span>](Join-String.md)
<span data-ttu-id="e64b5-231">パイプラインのオブジェクトを1つの文字列に結合します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-231">Combines objects from the pipeline into a single string.</span></span>

### [<span data-ttu-id="e64b5-232">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="e64b5-232">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="e64b5-233">スクリプト ブロックとコマンドレットの実行に要する時間を計測します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-233">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="e64b5-234">Measure-Object</span><span class="sxs-lookup"><span data-stu-id="e64b5-234">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="e64b5-235">オブジェクトの数値プロパティと、テキストのファイルなど文字列オブジェクト内の文字、単語、および行を計算します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-235">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="e64b5-236">New-Alias</span><span class="sxs-lookup"><span data-stu-id="e64b5-236">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="e64b5-237">新しいエイリアスを作成します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-237">Creates a new alias.</span></span>

### [<span data-ttu-id="e64b5-238">New-Event</span><span class="sxs-lookup"><span data-stu-id="e64b5-238">New-Event</span></span>](New-Event.md)
<span data-ttu-id="e64b5-239">新しいイベントを作成します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-239">Creates a new event.</span></span>

### [<span data-ttu-id="e64b5-240">新規-Guid</span><span class="sxs-lookup"><span data-stu-id="e64b5-240">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="e64b5-241">GUID を作成します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-241">Creates a GUID.</span></span>

### [<span data-ttu-id="e64b5-242">New-Object</span><span class="sxs-lookup"><span data-stu-id="e64b5-242">New-Object</span></span>](New-Object.md)
<span data-ttu-id="e64b5-243">Microsoft .NET Framework または COM オブジェクトのインスタンスを作成します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-243">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="e64b5-244">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="e64b5-244">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="e64b5-245">一時ファイルを作成します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-245">Creates a temporary file.</span></span>

### [<span data-ttu-id="e64b5-246">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="e64b5-246">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="e64b5-247">TimeSpan オブジェクトを作成します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-247">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="e64b5-248">New-Variable</span><span class="sxs-lookup"><span data-stu-id="e64b5-248">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="e64b5-249">新しい変数を作成します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-249">Creates a new variable.</span></span>

### [<span data-ttu-id="e64b5-250">Out-File</span><span class="sxs-lookup"><span data-stu-id="e64b5-250">Out-File</span></span>](Out-File.md)
<span data-ttu-id="e64b5-251">ファイルに出力を送信します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-251">Sends output to a file.</span></span>

### [<span data-ttu-id="e64b5-252">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="e64b5-252">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="e64b5-253">別のウィンドウの対話型のテーブルに出力を送信します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-253">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="e64b5-254">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="e64b5-254">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="e64b5-255">プリンターに出力を送信します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-255">Sends output to a printer.</span></span>

### [<span data-ttu-id="e64b5-256">Out-String</span><span class="sxs-lookup"><span data-stu-id="e64b5-256">Out-String</span></span>](Out-String.md)
<span data-ttu-id="e64b5-257">入力オブジェクトを文字列として出力します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-257">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="e64b5-258">Read-Host</span><span class="sxs-lookup"><span data-stu-id="e64b5-258">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="e64b5-259">コンソールからの入力行を読み取ります。</span><span class="sxs-lookup"><span data-stu-id="e64b5-259">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="e64b5-260">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="e64b5-260">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="e64b5-261">PowerShell エンジンとコマンドレットによって生成されるイベントをサブスクライブし `New-Event` ます。</span><span class="sxs-lookup"><span data-stu-id="e64b5-261">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="e64b5-262">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="e64b5-262">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="e64b5-263">Microsoft .NET Framework オブジェクトによって生成されるイベントをサブスクライブします。</span><span class="sxs-lookup"><span data-stu-id="e64b5-263">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="e64b5-264">Remove-Alias</span><span class="sxs-lookup"><span data-stu-id="e64b5-264">Remove-Alias</span></span>](Remove-Alias.md)
<span data-ttu-id="e64b5-265">現在のセッションからエイリアスを削除します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-265">Remove an alias from the current session.</span></span>

### [<span data-ttu-id="e64b5-266">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="e64b5-266">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="e64b5-267">イベントをイベント キューから削除します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-267">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="e64b5-268">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="e64b5-268">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="e64b5-269">現在のコンソールからブレークポイントを削除します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-269">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="e64b5-270">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="e64b5-270">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="e64b5-271">現在のセッションから拡張型を削除します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-271">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="e64b5-272">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="e64b5-272">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="e64b5-273">変数とその値を削除します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-273">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="e64b5-274">Select-Object</span><span class="sxs-lookup"><span data-stu-id="e64b5-274">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="e64b5-275">オブジェクトまたはオブジェクトのプロパティを選択します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-275">Selects objects or object properties.</span></span>

### [<span data-ttu-id="e64b5-276">Select-String</span><span class="sxs-lookup"><span data-stu-id="e64b5-276">Select-String</span></span>](Select-String.md)
<span data-ttu-id="e64b5-277">文字列とファイル内のテキストを検索します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-277">Finds text in strings and files.</span></span>

### [<span data-ttu-id="e64b5-278">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="e64b5-278">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="e64b5-279">XML 文字列または XML ドキュメント内のテキストを検索します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-279">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="e64b5-280">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="e64b5-280">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="e64b5-281">電子メールを送信します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-281">Sends an email message.</span></span>

### [<span data-ttu-id="e64b5-282">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="e64b5-282">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="e64b5-283">現在の PowerShell セッションで、コマンドレットまたはその他のコマンドのエイリアスを作成または変更します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-283">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="e64b5-284">Set-Date</span><span class="sxs-lookup"><span data-stu-id="e64b5-284">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="e64b5-285">指定する時刻にコンピューターのシステム時刻を変更します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-285">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="e64b5-286">Set-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="e64b5-286">Set-MarkdownOption</span></span>](Set-MarkdownOption.md)
<span data-ttu-id="e64b5-287">コンソールで Markdown コンテンツをレンダリングするために使用する色とスタイルを設定します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-287">Sets the colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="e64b5-288">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="e64b5-288">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="e64b5-289">行、コマンド、または変数にブレークポイントを設定します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-289">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="e64b5-290">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="e64b5-290">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="e64b5-291">PowerShell コンポーネントのトレースを構成、開始、および停止します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-291">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="e64b5-292">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="e64b5-292">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="e64b5-293">変数の値を設定します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-293">Sets the value of a variable.</span></span> <span data-ttu-id="e64b5-294">要求された名前の変数が存在しない場合は、変数を作成します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-294">Creates the variable if one with the requested name does not exist.</span></span>

### [<span data-ttu-id="e64b5-295">Show-Command</span><span class="sxs-lookup"><span data-stu-id="e64b5-295">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="e64b5-296">グラフィカルウィンドウに PowerShell コマンド情報を表示します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-296">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="e64b5-297">Show-Markdown</span><span class="sxs-lookup"><span data-stu-id="e64b5-297">Show-Markdown</span></span>](Show-Markdown.md)
<span data-ttu-id="e64b5-298">VT100 エスケープシーケンスを使用するか、HTML を使用してブラウザーで、Markdown ファイルまたは文字列をコンソールに表示します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-298">Shows a Markdown file or string in the console in a friendly way using VT100 escape sequences or in a browser using HTML.</span></span>

### [<span data-ttu-id="e64b5-299">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="e64b5-299">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="e64b5-300">プロパティ値別にオブジェクトを並べ替えます。</span><span class="sxs-lookup"><span data-stu-id="e64b5-300">Sorts objects by property values.</span></span>

### [<span data-ttu-id="e64b5-301">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="e64b5-301">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="e64b5-302">指定された期間、スクリプトまたはセッションでアクティビティを中断します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-302">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="e64b5-303">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="e64b5-303">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="e64b5-304">ファイルまたは変数にコマンドの出力を保存し、またそれをパイプラインに送信します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-304">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="e64b5-305">Test-Json</span><span class="sxs-lookup"><span data-stu-id="e64b5-305">Test-Json</span></span>](Test-Json.md)
<span data-ttu-id="e64b5-306">文字列が有効な JSON ドキュメントであるかどうかをテストします</span><span class="sxs-lookup"><span data-stu-id="e64b5-306">Tests whether a string is a valid JSON document</span></span>

### [<span data-ttu-id="e64b5-307">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="e64b5-307">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="e64b5-308">指定された式またはコマンドのトレースを構成し、開始します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-308">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="e64b5-309">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="e64b5-309">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="e64b5-310">インターネットからダウンロードされたファイルのブロックを解除します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-310">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="e64b5-311">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="e64b5-311">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="e64b5-312">イベントのサブスクリプションを取り消します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-312">Cancels an event subscription.</span></span>

### [<span data-ttu-id="e64b5-313">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="e64b5-313">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="e64b5-314">現在のセッションの書式設定データを更新します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-314">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="e64b5-315">Update-List</span><span class="sxs-lookup"><span data-stu-id="e64b5-315">Update-List</span></span>](Update-List.md)
<span data-ttu-id="e64b5-316">オブジェクトのコレクションを格納するプロパティ値の項目を追加または削除します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-316">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="e64b5-317">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="e64b5-317">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="e64b5-318">セッションで、拡張型データを更新します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-318">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="e64b5-319">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="e64b5-319">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="e64b5-320">スクリプト内の次のステートメントを実行する前に、デバッガー内のスクリプトを停止します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-320">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="e64b5-321">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="e64b5-321">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="e64b5-322">特定のイベントが発生するまで待機してから、実行を継続します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-322">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="e64b5-323">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="e64b5-323">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="e64b5-324">デバッグ メッセージをコンソールに出力します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-324">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="e64b5-325">書き込み-エラー</span><span class="sxs-lookup"><span data-stu-id="e64b5-325">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="e64b5-326">エラー ストリームにオブジェクトを書き込みます。</span><span class="sxs-lookup"><span data-stu-id="e64b5-326">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="e64b5-327">Write-Host</span><span class="sxs-lookup"><span data-stu-id="e64b5-327">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="e64b5-328">カスタマイズした出力をホストに書き込みます。</span><span class="sxs-lookup"><span data-stu-id="e64b5-328">Writes customized output to a host.</span></span>

### [<span data-ttu-id="e64b5-329">Write-Information</span><span class="sxs-lookup"><span data-stu-id="e64b5-329">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="e64b5-330">PowerShell がコマンドの情報ストリームデータを処理する方法を指定します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-330">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="e64b5-331">Write-Output</span><span class="sxs-lookup"><span data-stu-id="e64b5-331">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="e64b5-332">指定されたオブジェクトをパイプラインの次のコマンドに送信します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-332">Sends the specified objects to the next command in the pipeline.</span></span> <span data-ttu-id="e64b5-333">そのコマンドがパイプラインの最後のコマンドである場合、オブジェクトはコンソールに表示されます。</span><span class="sxs-lookup"><span data-stu-id="e64b5-333">If the command is the last command in the pipeline, the objects are displayed in the console.</span></span>

### [<span data-ttu-id="e64b5-334">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="e64b5-334">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="e64b5-335">PowerShell コマンドウィンドウ内の進行状況バーを表示します。</span><span class="sxs-lookup"><span data-stu-id="e64b5-335">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="e64b5-336">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="e64b5-336">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="e64b5-337">テキストを詳細メッセージ ストリームに書き込みます。</span><span class="sxs-lookup"><span data-stu-id="e64b5-337">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="e64b5-338">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="e64b5-338">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="e64b5-339">警告メッセージを書き込みます。</span><span class="sxs-lookup"><span data-stu-id="e64b5-339">Writes a warning message.</span></span>
